# api.cdrplatform.com

./: .env.dev  .env.dist  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  CDR_API_data_model-v2.drawio  CDR_API_data_model.drawio  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.devcontainer.yml  docker-compose.yml  manage.py  newrelic.ini  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-image.yaml  test.yaml
cdrplatform/: api_key_utils.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
cdrplatform/core/: admin.py  apps.py  auth.py  consts.py  converters.py  crypto.py  data.py  exceptions.py  forms.py  hashers.py  managers.py  models.py  permissions.py  selectors.py  services.py  tests.py  urls.py  urls_api.py  views.py  widgets.py
cdrplatform/core/api/: base.py  healthcheck.py
cdrplatform/core/api/cdr/: pricing.py  purchase.py
cdrplatform/core/api/certificate/: retrieve.py
cdrplatform/core/fixtures/: currency_conversion_rates.yaml  removal_methods_partners.yaml
cdrplatform/core/fixtures/development/: api-keys.yaml
cdrplatform/core/forms/auth/: login.py  registration.py
cdrplatform/core/forms/org/settings/: apikey.py
cdrplatform/core/migrations/: 0001_initial.py  0002_alter_cdruser_managers_removalmethod_slug_and_more.py  0003_rename_partner_name_removalpartner_name.py  0004_alter_removalmethod_slug_alter_removalpartner_slug.py  0005_currencyconversionrate.py  0006_alter_currencyconversionrate_options.py  0007_alter_removalrequest_uuid.py  0008_rename_cdr_unit_partnerpurchase_weight_unit_and_more.py  0009_organisationapikey.py  0010_alter_organisationapikey_managers_and_more.py  0011_removalrequestitem_variable_fees.py  0012_alter_removalrequestitem_removal_request.py  0013_removalpartner_disabled.py  0014_customerorganisation_short_id.py  0015_customerorganisation_users.py  0016_customerorganisation_created_date.py  0017_alter_customerorganisation_options_and_more.py  0018_alter_organisationapikey_managers_and_more.py  0019_alter_partnerconfirmation_confirmation_url.py  0020_removalrequest_is_test.py  0021_alter_removalrequest_is_test.py
cdrplatform/core/templates/core/: base.html
cdrplatform/core/views/auth/: registration.py
cdrplatform/core/views/org/: settings.py
cdrplatform/theme/: README.md  apps.py  package-lock.json  package.json  tailwind.config.js
cdrplatform/theme/static/theme/css/: tailwind.css
cdrplatform/theme/templates/theme/: head.html
rest-examples/: healthcheck.http  pricing-request.http
templates/: base.html
templates/components/: logout-button.html
templates/components/forms/: submit.html
templates/registration/: base.html  login.html  register.html
(+7 files in other folders)
