[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.isort]
profile = 'black'

[tool.poetry]
name = "cdrplatform"
version = "0.1.0"
description = "Python library for https://cdrplatform.com"
authors = ["Ewan Jones <ewan@climacrux.com>"]
license = "Proprietry"

[tool.poetry.dependencies]
python = "^3.10"
Django = { extras = ["argon2"], version = "^4.1.1" }
django-environ = "^0.9.0"
django-allauth = "^0.51.0"
whitenoise = { extras = ["brotli"], version = "^6.2.0" }
redis = "^4.3.4"
hiredis = "^2.0.0"
shortuuid = "^1.0.9"
django-model-utils = "^4.2.0"
django-filter = "^22.1"
Pillow = "^9.2.0"
django-flags = "^5.0.12"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
drf-spectacular = "^0.24.2"
drf-standardized-errors = {extras = ["openapi"], version = "^0.12.2"}
djangorestframework-api-key = "^2.2.0"
newrelic = "^8.4.0"

[tool.poetry.dev-dependencies]
black = { version = "^22.8.0", allow-prereleases = true }
pre-commit = "^2.20.0"
flake8-django = "^1.1.5"
django-debug-toolbar = "^3.7.0"
Faker = "^15.1.1"
safety = "^2.3.1"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
