[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.djlint]
profile = "django"
extension = "html"
# H031 = meta keywords. No longer really used so ignore them
ignore = "H031"

[tool.isort]
profile = 'black'

[tool.poetry]
name = "cdrplatform"
version = "0.1.0"
description = "Python library for https://cdrplatform.com"
authors = ["Ewan Jones <ewan@climacrux.com>"]
license = "Proprietry"

[tool.poetry.dependencies]
Django = { extras = ["argon2"], version = "^4.2.1" }
django-allauth = "^0.54.0"
django-environ = "^0.10.0"
django-filter = "^22.1"
django-flags = "^5.0.12"
django-model-utils = "^4.2.0"
django-zen-queries = "^2.1.0"
djangorestframework = "^3.14.0"
djangorestframework-api-key = "^2.2.0"
drf-spectacular = "^0.24.2"
drf-standardized-errors = { extras = ["openapi"], version = "^0.12.2" }
gunicorn = "^20.1.0"
hiredis = "^2.0.0"
Markdown = "^3.4.1"
newrelic = "^8.4.0"
Pillow = "^9.2.0"
psycopg2 = "^2.9.5"
python = "^3.11"
redis = "^4.5.4"
shortuuid = "^1.0.9"
whitenoise = { extras = ["brotli"], version = "^6.2.0" }

[tool.poetry.dev-dependencies]
black = { version = "^22.8.0", allow-prereleases = true }
django-debug-toolbar = "^4.0.0"
Faker = "^15.1.1"
flake8-django = "^1.1.5"
pre-commit = "^2.20.0"
safety = "^2.3.1"
djlint = "^1.28.0"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
